@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-03T01:57:13Z",
-  "count_outdated" : 257,
-  "uniques_outdated" : 223,
+  "timestamp" : "2025-04-09T01:58:06Z",
+  "count_outdated" : 258,
+  "uniques_outdated" : 224,
   "count" : 261,
   "uniques" : 227,
   "clones" : [
-    {
-      "timestamp": "2025-03-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-27T00:00:00Z",
       "count": 1,
